--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,9 +1,9 @@
 .Home {
-  background-color: #0c1a2b;
+  background-color: white;
   height: 100vh;
   vertical-align:top;
   padding: 20px;
-  color: white;
+  color: #0c1a2b;
 }
 
 .top {
@@ -16,7 +16,7 @@
 
 .app-header {
   padding: 20px;
-  color: white;
+  color: #0c1a2b;
   text-align: center;
 }
 
